refactor(backend): adopt Math.clamp and other Sonar cleanups
- GameEngine: Java 21 Math.clamp replaces nested Math.min/max, and the redundant (long) cast goes (the long-returning delta already widens the sum).
- BookUploadService: group the anchored regex alternation ((?:^-)|(?:-$)) so precedence is explicit.
- SessionRegistry: mark the no-arg constructor @Autowired, matching the pattern the other beans already follow.